# Bluebox2D

./: .gitignore  CMakeLists.txt  CONTRIBUTE.md  Makefile  PKGBUILD  README.md  TODO.md
docs/: docs.md  documentation.md
docs/dev/: coding_style.md  configuring.md  contributing_and_license.md  get_started.md  mixing_languages.md  plugins.md  using_the_api.md
include/: Bluebox.h  def.h  event.h  exit.h  font.h  init.h  log.h  main.h  message.h  module.h  music.h  render.h  save.h  target.h  type.h  vector.h  version.h
man/: bluebox.1
res/: Bluebox.desktop
res/fonts/: LICENSE_InterV.txt
src/: event.c  exit.c  font.c  log.c  main.c  message.c  module.c  music.c  render.c  save.c  target.c  vector.c  win_init.c
tools/: control  create-deb.sh
