cmake_minimum_required(VERSION 3.20)
project(Bluebox2D)
# The 'cmake/' directory contains all the modules for using SDL2.
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/)
find_package(SDL2 REQUIRED)

find_package(SDL2_image REQUIRED)

find_package(SDL2_ttf REQUIRED)

find_package(SDL2_mixer)

include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/include/)
option(HAVE__DEBUG "Include debug information with Bluebox" OFF)
option(ENABLE_MUSIC "Enable in-game music (Requires SDL2_Mixer) -- DEPRECATED" OFF)
option(ENABLE_SAVING "Optionally enable saving feature." ON)
if (ENABLE_SAVING)
  set(SOURCES src/save.c src/render.c src/target.c src/event.c src/font.c src/win_init.c src/log.c src/exit.c src/message.c src/main.c src/vector.c)
  add_compile_definitions(__BLUEBOX_SAVING_ENABLED)
else()
  set(SOURCES src/render.c src/target.c src/event.c src/font.c src/win_init.c src/log.c src/exit.c src/message.c src/main.c src/vector.c)
  add_compile_definitions(__BLUEBOX_SAVING_DISABLED)
endif()
if (HAVE__DEBUG)
  set(CMAKE_C_FLAGS "-Wno-unknown-warning -std=c99 -Wno-switch-default -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wredundant-decls -Wsign-conversion -Wstrict-overflow=5 -Wundef -Wunused -Wno-implicit-fallthrough -O0 -Wno-unused-variable -g -fsanitize=address")
else()
  set(CMAKE_C_FLAGS "-Wno-unknown-warning -std=c99 -Wno-switch-default -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wredundant-decls -Wsign-conversion -Wstrict-overflow=5 -Wundef -Wunused -Wno-implicit-fallthrough -O3 -Wno-unused-variable")
endif()
if (ENABLE_MUSIC)
  add_compile_definitions(__BLUEBOX_ENABLE_MUSIC)
endif()
add_executable(bluebox ${SOURCES})
add_compile_definitions(__BLUEBOX_CMAKE)
target_compile_options(bluebox PRIVATE ${CMAKE_C_FLAGS})
if (ENABLE_MUSIC)
	target_link_libraries(bluebox ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2_MIXER_LIBRARIES} GL m dl)
else()
	target_link_libraries(bluebox ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} GL m dl)
endif()
if (HAVE__DEBUG)
  add_compile_definitions(HAVE__DEBUG)
endif()

set(INSTALL_PATH /usr/share/bluebox)

install(DIRECTORY DESTINATION ${INSTALL_PATH})
install(DIRECTORY DESTINATION ${INSTALL_PATH}/fonts)
install(FILES ${CMAKE_SOURCE_DIR}/res/Bluebox.desktop DESTINATION /usr/share/applications)
install(FILES ${CMAKE_SOURCE_DIR}/build/bluebox DESTINATION /usr/bin)
install(FILES ${CMAKE_SOURCE_DIR}/res/fonts/InterV.ttf DESTINATION ${INSTALL_PATH}/fonts/)
install(FILES ${CMAKE_SOURCE_DIR}/res/logo.png DESTINATION ${INSTALL_PATH})
install(FILES ${CMAKE_SOURCE_DIR}/res/pwater.png DESTINATION ${INSTALL_PATH})
install(FILES ${CMAKE_SOURCE_DIR}/res/tree.png DESTINATION ${INSTALL_PATH})
install(FILES ${CMAKE_SOURCE_DIR}/res/grass.png DESTINATION ${INSTALL_PATH})
install(FILES ${CMAKE_SOURCE_DIR}/res/sand.png DESTINATION ${INSTALL_PATH})
install(FILES ${CMAKE_SOURCE_DIR}/res/stone.png DESTINATION ${INSTALL_PATH})
install(FILES ${CMAKE_SOURCE_DIR}/res/dirt.png DESTINATION ${INSTALL_PATH})
install(FILES ${CMAKE_SOURCE_DIR}/res/building.png DESTINATION ${INSTALL_PATH})
install(FILES ${CMAKE_SOURCE_DIR}/man/bluebox.1.gz DESTINATION /usr/share/man/man1/)
install(FILES ${CMAKE_SOURCE_DIR}/LICENSE DESTINATION ${INSTALL_PATH})

unset(HAVE__DEBUG CACHE)
unset(ENABLE_MUSIC CACHE)
unset(ENABLE_SAVING CACHE)
